# ouroboros

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ouroboros/: Cargo.toml  README.md
ouroboros-cpp/include/: macro.h  mutable.h  object.h  ouroboros.h  type_info.h  uuid.h
ouroboros-cpp/tests/: custom  custom.cpp  custom_io  custom_io.cpp  echo  echo.cpp  object.cpp  sum  sum.cpp  tuple  tuple.cpp  uuid  uuid.cpp
ouroboros-derive/: Cargo.toml
ouroboros-derive/src/: lib.rs
ouroboros-proc-macro/: Cargo.toml
ouroboros-proc-macro/src/: lib.rs
ouroboros-py/: flake.nix  setup.py
ouroboros-py/src/ouroboros/: __init__.py  generic.py  mutable.py  object.py  type_info.py
ouroboros-py/tests/: sum.py
ouroboros-rex/: Cargo.toml
ouroboros-rex/src/: lib.rs
ouroboros-vm/: Cargo.toml
ouroboros-vm-prelude/: Cargo.toml
ouroboros-vm-prelude/src/: arithmetic.rs  compose.rs  fold.rs  lib.rs  map.rs  reduce.rs  skip.rs  swap.rs  take.rs
ouroboros-vm-stdlib/: Cargo.toml
ouroboros-vm-stdlib/src/: echo.rs  lib.rs
ouroboros-vm/src/: lib.rs  store.rs
ouroboros-wasm/: Cargo.toml
ouroboros-wasm/src/: lib.rs
ouroboros/src/: alias.rs  error.rs  field.rs  generic.rs  lambda.rs  lib.rs  product.rs  ptr.rs  serde.rs  sum.rs  symbolic.rs  type_info.rs  visitor.rs
ouroboros/src/features/: graphql.rs  mod.rs  serde.rs  sqlx.rs
ouroboros/src/transpile/: cpp.rs  mod.rs  python.rs  ts.rs
ouroboros/tests/: lib.rs
