[package]
name = "ouroboros-rex"
version = "0.1.0"
edition = "2024"

[dependencies]
ouroboros = { path = "../ouroboros", default-features = false }
ouroboros-proc-macro = { path = "../ouroboros-proc-macro" }
rex = { git = "ssh://git@github.com/talo/rex.git", rev = "a407ab108121c22acd544d68de98cb0fd1d565c0" }
