[package]
name = "ouroboros-vm-prelude"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ouroboros = { path = "../ouroboros" }
ouroboros-wasm = { path = "../ouroboros-wasm" }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ['preserve_order'] }
