[package]
name = "ouroboros-vm-prelude"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ouroboros = { path = "../ouroboros", default-features = false, features = [
    "serde",
] }
ouroboros-wasm = { path = "../ouroboros-wasm", default-features = false }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
