[package]
name = "ouroboros-vm"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { version = "1.0.75" }
wasmtime = { version = "15.0.1", features = ["async"] }

[dev-dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.35", features = ["macros", "rt"] }
