[package]
name = "ouroboros-vm"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { version = "1.0.75" }
async-trait = { version = "0.1.77" }
ouroboros = { path = "../ouroboros" }
ouroboros-wasm = { path = "../ouroboros-wasm" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
wasmtime = { version = "15.0.1", features = ["async"] }
tokio = { version = "1.35", features = ["macros", "rt", "sync"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
wasm = []
