[package]
name = "ouroboros"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "6.0", optional = true }
ouroboros-proc-macro = { path = "../ouroboros-proc-macro" }
tracing = { version = "0.1.37" }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.7.3", features = ["postgres"], optional = true }

[features]
default = ["arrow", "graphql", "serde", "sqlx"]
arrow = []
graphql = ["dep:async-graphql"]
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:sqlx"]
