[package]
name = "ouroboros"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "7.0", optional = true }
ouroboros-proc-macro = { path = "../ouroboros-proc-macro" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.7", features = ["postgres"], optional = true }
thiserror = { version = "1.0" }

[features]
default = ["graphql", "serde", "sqlx"]
graphql = ["dep:async-graphql"]
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:sqlx"]
